syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Toggly.Web";

package Metrics;

service Metrics {
    // Accepts a business metric
    rpc SendMetrics(MetricStat) returns (MetricResult);
}

// The request message containing the metric.
message MetricStat {
    string appKey = 1;
    string environment = 2;
    google.protobuf.Timestamp time = 3;
    repeated MetricStatMessage stats = 4;
    repeated MetricCounterMessage counters = 5;
    repeated MetricObservationMessage observations = 6;
	optional string instanceName = 7;
}

message MetricStatMessage {
	string metric = 1;
	reserved 2,3;
	optional string feature = 4; //optional feature referenced for subcount
	double value = 5; //value for metric if feature is not specified, otherwise value when feature is enabled
	optional double valueDisabled = 6; //value when feature is disabled
}

message MetricCounterMessage {
	string metric = 1;
	reserved 2,3;
	optional string feature = 4; //optional feature referenced for subcount
	double value = 5; //value for metric if feature is not specified, otherwise value when feature is enabled
	optional double valueDisabled = 6; //value when feature is disabled
}

message MetricObservationMessage {
	google.protobuf.Timestamp time = 1;
	string metric = 2;
	reserved 3,4;
	optional string feature = 5; //optional feature referenced for subcount
	double value = 6; //value for metric if feature is not specified, otherwise value when feature is enabled
	optional double valueDisabled = 7; //value when feature is disabled
}

message MetricResult {
	int32 count = 1;
}